--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "clipcraft_shared",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Shared files for all microservices",
   "main": "dist/index.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/toy0407/clipcraft_shared.git"
+  },
   "files": [
     "dist",
     "prisma-client"
