--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toy0407/clipcraft-shared",
-  "version": "0.2.0",
+  "version": "0.3.2",
   "description": "Shared files for all microservices",
   "main": "dist/index.js",
   "publishConfig": {
@@ -32,10 +32,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "joi": "^18.0.2",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "jest": "^29.7.0",
     "prisma": "^6.19.0",
